# TSPlus-Back

Authentication/: pyproject.toml
Authentication/docker/: dockerfile
Authentication/src/app/: authentication.py  main.py
Authentication/src/app/dao/: authentication.py
Authentication/src/app/db/: config.py  database.py
Authentication/src/app/models/: authentication.py
Authentication/src/app/routers/: authentication.py
Empresas/: pyproject.toml
Empresas/src/app/: empresas.py  main.py
Empresas/src/app/dao/: empresas.py
Empresas/src/app/models/: empresas.py
Empresas/src/app/routers/: empresas.py
Permisos/: pyproject.toml
Permisos/docker/: dockerfile
Permisos/src/: app.py
Permisos/src/app/: main.py  permisos.py
Permisos/src/app/models/: permisos.py
Permisos/src/app/routers/: permisos.py
Puestos/: pyproject.toml
Puestos/docker/: dockerfile
Puestos/src/app/: main.py  puestos.py
Puestos/src/app/dao/: puestos.py
Puestos/src/app/models/: puestos.py
Puestos/src/app/routers/: puestos.py
Users/: pyproject.toml
Users/docker/: dockerfile
Users/src/app/: main.py  users.py
Users/src/app/dao/: users.py
Users/src/app/models/: users.py
Users/src/app/routers/: users.py
