[tool.poetry]
name = "empresas"
version = "0.1.0"
description = ""
authors = ["Berna842 <rodriguezquezadabernardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.7.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
click = "^8.1.8"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
