[tool.poetry]
name = "permisos"
version = "0.1.0"
description = ""
authors = ["Berna RQ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
logging = "^0.4.9.6"
motor = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
